# air-quality-exceptional-events

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
analysis/: demos_to_events_compare.Rmd  findings.html  findings.qmd  findings_for_writing.qmd  findings_for_writing.rmarkdown
data/manual/: blame_demos.csv  blame_metadata_demonstrations.csv  federal_register_reshaped.csv
data/manual/census_format_fixes/: SUB-IP-EST2022-POP-06.csv  SUB-IP-EST2022-POP-08.csv  SUB-IP-EST2022-POP-16.csv  SUB-IP-EST2022-POP-41.csv  SUB-IP-EST2022-POP-49.csv
data/processed/: federal_register_areas_historical.csv  federal_register_reshaped.csv
data/processed/exclusion_events/: AMP360_2109023-0.txt  AMP360_2109024-0.txt  AMP360_2109026-0.txt  AMP360_2109028-0.txt  AMP360_2109029-0.txt  AMP360_2109032-0.txt  AMP360_2111388-0.txt
data/processed/for_vis/: concentration_plot_df.csv  concurred_county_days_by_county.csv  concurred_county_days_by_state.csv  concurred_monitors_with_lat_longs.csv  demos_blamed.csv  events_by_county.csv  events_by_state.csv  federal_register_areas_current.csv  mcmurray_concurrences.csv  ozone_concentration_plot_df.csv  pm10_concentration_plot.csv  wildfires_vs_high_winds.csv
data/raw/: Guide_to_.pdf_and_.txt_files.xlsx  exceptional_events_1_1_2016_copy_for_MuckRock.xls  methods_all.csv
etl/: blame_parse.Rmd  blame_scrape_prep.R  demos_blamed.csv  federal_register_pop_estimates_current.R  federal_register_pop_estimates_historical.R  parse_blame_data.R  prep_for_vis.R
queries/airquality/: concurred.sql  denied.sql
(+42 files in other folders)
